--- a/index.html
+++ b/index.html
@@ -52,11 +52,44 @@
 
         <!-- ABOUT ME -->
         <section id="aboutme" class="section about-section">
-            <div class="container">
-                <h2>About Me</h2>
-                <p>
-                aaaaaaaa
-                </p>
+            <div class="about-container">
+                <div class="about-image">
+                    <div class="circle-image">
+                        <img src="img/Slides/slide2.png" alt="Lie Jin Wang" />
+                    </div>
+                </div>
+
+                <div class="about-content">
+                    <button class="carousel-btn left" id="prevBtn">⬅</button>
+                    <div class="carousel">
+                        <div class="carousel-item active">
+                            <h2>ABOUT ME</h2>
+                            <p>aaaaaaaa</p>
+                        </div>
+                        <div class="carousel-item">
+                            <h2>SKILLS</h2>
+                            <!--
+                            <ul>
+                                <li>Photoshop</li>
+                                <li>After Effects</li>
+                                <li>Blender</li>
+                                <li>Javascript</li>
+                            </ul>
+                            -->
+                        </div>
+                        <div class="carousel-item">
+                            <h2>TIMELINE</h2>
+                            <!--
+                            <ul>
+                                <li><strong>2024</strong> – Proyecto ABC</li>
+                                <li><strong>2023</strong> – Exposición XYZ</li>
+                                <li><strong>2022</strong> – Graduación</li>
+                            </ul>
+                            -->
+                        </div>
+                    </div>
+                    <button class="carousel-btn right" id="nextBtn">➡</button>
+                </div>
             </div>
         </section>
 
@@ -65,5 +98,6 @@
 
     <script src="js/AutoSlide.js"></script>
     <script src="js/SectionJumper.js"></script>
+    <script src="js/AboutCarousel.js"></script>
 </body>
 </html>
