Added Projects Sections. Updated variables names in JS. Imported node modules with animate.css. Pending update the swipe animation and projects animations with animate.css

--- a/index.html
+++ b/index.html
@@ -93,11 +93,42 @@
             </div>
         </section>
 
+
+        <!-- Projects -->
+        <section id="projects" class="section projects-section">
+            <div class="projects-grid">
+                <!-- Project 1 -->
+                <div class="project-card">
+                    <div class="project-image">
+                        <img src="img/Slides/slide1.png" alt="Proyecto 1" />
+                        <div class="project-hover">
+                            <p>Descripción del proyecto 1</p>
+                            <a href="project1.html" class="view-more-btn">View More</a>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Project 2 -->
+                <div class="project-card">
+                    <div class="project-image">
+                        <img src="img/Slides/slide2.png" alt="Proyecto 2" />
+                        <div class="project-hover">
+                            <p>Descripción del proyecto 2</p>
+                            <a href="project2.html" class="view-more-btn">View More</a>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- TBD -->
+            </div>
+        </section>
+
     </div>
 
 
     <script src="js/AutoSlide.js"></script>
     <script src="js/SectionJumper.js"></script>
     <script src="js/AboutCarousel.js"></script>
+    <script src="js/ProjectsAnimController.js"></script>
 </body>
 </html>
