Integrated animate.css to the animations and deleted old animations in css

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
         <!-- ABOUT ME -->
         <section id="aboutme" class="section about-section">
-            <div class="about-container">
+            <div class="about-container animate__animated">
                 <div class="about-image">
                     <div class="circle-image">
                         <img src="img/Slides/slide2.png" alt="Lie Jin Wang" />
@@ -126,6 +126,8 @@
     </div>
 
 
+    <script src="js/global.js"></script>
+    <script src="js/AnimationHandler.js"></script>
     <script src="js/AutoSlide.js"></script>
     <script src="js/SectionJumper.js"></script>
     <script src="js/AboutCarousel.js"></script>
