Added General handler JS and removed other JS

--- a/index.html
+++ b/index.html
@@ -128,9 +128,6 @@
 
     <script src="js/global.js"></script>
     <script src="js/AnimationHandler.js"></script>
-    <script src="js/AutoSlide.js"></script>
-    <script src="js/SectionJumper.js"></script>
-    <script src="js/AboutCarousel.js"></script>
-    <script src="js/ProjectsAnimController.js"></script>
+    <script src="js/GeneralHandler.js"></script>
 </body>
 </html>
