Projects section done. Pending Stylizing

--- a/index.html
+++ b/index.html
@@ -94,16 +94,24 @@
         </section>
 
 
-        <!-- Projects -->
+        <!-- PROJECTS -->
         <section id="projects" class="section projects-section">
             <div class="projects-grid">
                 <!-- Project 1 -->
                 <div class="project-card">
                     <div class="project-image">
-                        <img src="img/Slides/slide1.png" alt="Proyecto 1" />
+                        <img src="img/Slides/slide1.png" alt="Project 1" />
+                        <div class="project-overlay"></div>
                         <div class="project-hover">
-                            <p>Descripción del proyecto 1</p>
-                            <a href="project1.html" class="view-more-btn">View More</a>
+                            <div class="card-title">
+                                <h2>Project 1 Title</h2>
+                            </div>
+                            <div class="card-extra">
+                                <p class ="card-description">
+                                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+                                </p>
+                                <a href="project1.html" class="view-more-btn">View More</a>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -111,10 +119,16 @@
                 <!-- Project 2 -->
                 <div class="project-card">
                     <div class="project-image">
-                        <img src="img/Slides/slide2.png" alt="Proyecto 2" />
+                        <img src="img/Slides/slide2.png" alt="Project 2" />
+                        <div class="project-overlay"></div>
                         <div class="project-hover">
-                            <p>Descripción del proyecto 2</p>
-                            <a href="project2.html" class="view-more-btn">View More</a>
+                            <div class="card-title">
+                                <h2>Project 2 Title</h2>
+                            </div>
+                            <div class="card-extra">
+                                <p class ="card-description">Project 2 description</p>
+                                <a href="project1.html" class="view-more-btn">View More</a>
+                            </div>
                         </div>
                     </div>
                 </div>
