--- a/index.html
+++ b/index.html
@@ -136,6 +136,28 @@
                 <!-- TBD -->
             </div>
         </section>
+        
+        <!--CONTACT-->
+        <section id="contact" class="section contact-section">
+            <div class="contact-container">
+                <h2 class="section-title">Let's Work Together</h2>
+                <p class="section-subtitle">Have a project in mind or just want to say hi? Feel free to reach out!</p>
+
+                <!-- Redes sociales -->
+                <div class="contact-socials">
+                    <a href="https://www.artstation.com/jinanggd" target="_blank" class="social-link">ArtStation</a>
+                    <a href="https://www.linkedin.com/in/lie-jin-wang-189536174/" target="_blank" class="social-link">LinkedIn</a>
+                    <a href="https://www.instagram.com/jinanggd/" target="_blank" class="social-link">Instagram</a>
+                </div>
+
+                <div class="contact-content">
+                    <div class="contact-info">
+                        <p>Email me at:</p>
+                        <a href="mailto:lie9762@gmail.com" class="contact-email">lie9762@gmail.com</a>
+                    </div>
+                </div>
+            </div>
+        </section>
 
     </div>
 
