header and latest work section done

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Lie Jin Wang – Portfolio</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Open+Sans&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="css/style.css"/>
   
   <!-- Íconos Font Awesome CDN (para redes) -->
@@ -11,32 +13,38 @@
 <body>
 <!-- TOP HEADER -->
     <header>
-    <div class="left">
-        <h1>Lie Jin Wang</h1>
-    </div>
+        <div class="left">
+            <h1>Lie Jin Wang</h1>
+            <p class="subtitle-header">CONCEPT ART - VFX - 3D MODELLING - PROGRAMMING</p>
+        </div>
 
-    <div class="center">
-        <nav>
-        <a href="#latestwork">Latest work</a>
-        <a href="#aboutme">About Me</a>
-        <a href="#projects">Projects</a>
-        <a href="#contact">Contact</a>
-        </nav>
-    </div>
+        <div class="center">
+            <nav>
+            <a href="#latestwork">Latest work</a>
+            <a href="#aboutme">About Me</a>
+            <a href="#projects">Projects</a>
+            <a href="#contact">Contact</a>
+            </nav>
+        </div>
 
-    <div class="right socialmedia">
-        <a href="https://instagram.com" target="_blank"><a href="https://instagram.com">📸</a>
-
-
-        <a href="https://linkedin.com" target="_blank"><a href="https://linkedin.com">💼</a>
-        <a href="https://behance.net" target="_blank"><a href="https://behance.net">🎨</a>
-    </div>
+        <div class="right socialmedia">
+            <a href="https://www.instagram.com/jinanggd/" target="_blank" rel="noopener noreferrer" aria-label="Instagram">
+                <i class="fab fa-instagram"></i>
+            </a>
+            <a href="https://www.linkedin.com/in/lie-jin-wang-189536174/" target="_blank" rel="noopener noreferrer" aria-label="LinkedIn">
+                <i class="fab fa-linkedin-in"></i>
+            </a>
+            <a href="https://www.artstation.com/jinanggd" target="_blank" rel="noopener noreferrer" aria-label="ArtStation">
+                <i class="fab fa-artstation"></i>
+            </a>
+        </div>
     </header>
 
     <div class="main-container">
         <!-- HOME SLIDER -->
         <section id="latestwork" class="section">
             <div class="slider">
+                <!--
                 <div class="slide visible">
                     <img src="img/Slides/slide1.png" alt="Obra 1" />
                 </div>
@@ -46,7 +54,9 @@
                 <div class="slide">
                     <img src="img/Slides/slide2.png" alt="Obra 3" />
                 </div>
+                -->
                 <div class="slider-dots" id="slider-dots"></div>
+                
             </div>
         </section>
 
