Projects section polished

--- a/index.html
+++ b/index.html
@@ -194,41 +194,94 @@
             <div class="projects-grid">
                 <!-- Project 1 -->
                 <div class="project-card">
-                    <div class="project-image">
-                        <img src="img/Slides/slide1.png" alt="Project 1" />
-                        <div class="project-overlay"></div>
-                        <div class="project-hover">
-                            <div class="card-title">
-                                <h2>Project 1 Title</h2>
-                            </div>
-                            <div class="card-extra">
-                                <p class ="card-description">
-                                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
-                                </p>
-                                <a href="project1.html" class="view-more-btn">View More</a>
-                            </div>
+                    <img src="resources/ProjectsBG/United1944.png" alt="UNITED 1994" class="project-image"/>
+                    <div class="project-overlay"></div>
+                    <div class="project-hover">
+                        <div class="card-title">
+                            <img src="resources/Icons/ICOProjects/united1994.png" alt="United 1994" class="project-logo"/>
+                            <!-- <h2>UNITED 1994</h2> -->
+                        </div>
+                        <div class="card-extra">
+                            <p class ="card-description">
+                                UNITED 1944 is a first-person shooter set during World War II, developed by Novarama <br>
+                                During its development, I worked across multiple areas including 3D modeling, level art, UI design, and VFX
+                            </p>
+                            <a href="project1.html" class="view-more-btn">View More</a>
                         </div>
                     </div>
                 </div>
 
-                <!-- Project 2 -->
+                <!-- Project 2 VFX-->
                 <div class="project-card">
-                    <div class="project-image">
-                        <img src="img/Slides/slide2.png" alt="Project 2" />
-                        <div class="project-overlay"></div>
-                        <div class="project-hover">
-                            <div class="card-title">
-                                <h2>Project 2 Title</h2>
-                            </div>
-                            <div class="card-extra">
-                                <p class ="card-description">Project 2 description</p>
-                                <a href="project1.html" class="view-more-btn">View More</a>
-                            </div>
+                    <img src="resources/ProjectsBG/VFX.png" alt="VFX Dump" class="project-image"/>
+                    <div class="project-overlay"></div>
+                    <div class="project-hover">
+                        <div class="card-title">
+                            <!--<img src="resources/Icons/ICOProjects/united1994.png" alt="United 1994" class="project-logo"/> -->
+                            <h2>VFX DUMP</h2>
+                        </div>
+                        <div class="card-extra">
+                            <p class ="card-description">
+                                A collection of VFX and materials created in Unreal Engine. Some were done using the Cascade particle system, and others with the Niagara system.
+                            </p>
+                            <a href="project1.html" class="view-more-btn">View More</a>
                         </div>
                     </div>
                 </div>
 
-                <!-- TBD -->
+                <!-- Project 3 7 Blades -->
+                <div class="project-card">
+                    <img src="resources/ProjectsBG/7blades.jpg" alt="7Blades" class="project-image"/>
+                    <div class="project-overlay"></div>
+                    <div class="project-hover">
+                        <div class="card-title">
+                            <!--<img src="resources/Icons/ICOProjects/united1994.png" alt="United 1994" class="project-logo"/> -->
+                            <h2>7 BLADES</h2>
+                        </div>
+                        <div class="card-extra">
+                            <p class ="card-description">
+                                7 BLADES is a Concept Art Project created to explore a fantasy RPG game idea
+                            </p>
+                            <a href="project1.html" class="view-more-btn">View More</a>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Project 4 MEM -->
+                 <div class="project-card">
+                    <img src="resources/ProjectsBG/Mem.png" alt="VFX Dump" class="project-image"/>
+                    <div class="project-overlay"></div>
+                    <div class="project-hover">
+                        <div class="card-title">
+                            <img src="resources/Icons/ICOProjects/mem.png" alt="MEM" class="project-logo"/>
+                            <!--<h2>VFX DUMP</h2>-->
+                        </div>
+                        <div class="card-extra">
+                            <p class ="card-description">
+                                MEM: Ballad of Broken Melodies is a musical Metroidvania in 2.5D developed by Vectoral Eyebrows Studio for the final project of Master in Creation of Videogame in UPF - BSM ( Barcelona )
+                            </p>
+                            <a href="project1.html" class="view-more-btn">View More</a>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Project 5 DUMP -->
+                 <div class="project-card">
+                    <img src="resources/ProjectsBG/Dump.png" alt="VFX Dump" class="project-image"/>
+                    <div class="project-overlay"></div>
+                    <div class="project-hover">
+                        <div class="card-title">
+                            <!--<img src="resources/Icons/ICOProjects/united1994.png" alt="United 1994" class="project-logo"/> -->
+                            <h2>DUMP</h2>
+                        </div>
+                        <div class="card-extra">
+                            <p class ="card-description">
+                                A collection of illustration, studies, portraits, 3D renders
+                            </p>
+                            <a href="project1.html" class="view-more-btn">View More</a>
+                        </div>
+                    </div>
+                </div>
             </div>
         </section>
         
