contact section done

--- a/index.html
+++ b/index.html
@@ -288,24 +288,40 @@
         <!--CONTACT-->
         <section id="contact" class="section contact-section">
             <div class="contact-container">
-                <h2 class="section-title">Let's Work Together</h2>
-                <p class="section-subtitle">Have a project in mind or just want to say hi? Feel free to reach out!</p>
+                <h2 class="section-title">Let's Work Together!</h2>
+                <p class="section-subtitle">Have a project in mind or just want to say hi?<br>Feel free to reach out! :D</p>
 
                 <!-- Redes sociales -->
                 <div class="contact-socials">
-                    <a href="https://www.artstation.com/jinanggd" target="_blank" class="social-link">ArtStation</a>
-                    <a href="https://www.linkedin.com/in/lie-jin-wang-189536174/" target="_blank" class="social-link">LinkedIn</a>
-                    <a href="https://www.instagram.com/jinanggd/" target="_blank" class="social-link">Instagram</a>
+                    <a href="https://www.instagram.com/jinanggd/" target="_blank" rel="noopener noreferrer" aria-label="Instagram" class="contact-social-icon">
+                        <i class="fab fa-instagram"></i>
+                    </a>
+                    <a href="https://www.linkedin.com/in/lie-jin-wang-189536174/" target="_blank" rel="noopener noreferrer" aria-label="LinkedIn" class="contact-social-icon">
+                        <i class="fab fa-linkedin-in"></i>
+                    </a>
+                    <a href="https://www.artstation.com/jinanggd" target="_blank" rel="noopener noreferrer" aria-label="ArtStation" class="contact-social-icon">
+                        <i class="fab fa-artstation"></i>
+                    </a>
                 </div>
 
                 <div class="contact-content">
                     <div class="contact-info">
-                        <p>Email me at:</p>
-                        <a href="mailto:lie9762@gmail.com" class="contact-email">lie9762@gmail.com</a>
+                        <p>Or Email me at:</p>
+                        <a href="mailto:lie9762@gmail.com" class="contact-email">
+                            <i class="fas fa-envelope"></i>lie9762@gmail.com
+                        </a>
                     </div>
                 </div>
+                
+            </div>
+            <div class="disclaimer">
+                <p>
+                    This website is currently under construction. Some features may not work as intended and certain sections may not be fully responsive. Thanks for your understanding!
+                </p>
             </div>
         </section>
+
+        
 
     </div>
 
