Created projects individual html. Started with VFX project

--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Open+Sans&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="css/style.css"/>
-  
-  <!-- Íconos Font Awesome CDN (para redes) -->
+  <link rel="stylesheet" href="css/index.css"/>  
 </head>
 <body>
 <!-- TOP HEADER -->
@@ -224,7 +223,7 @@
                             <p class ="card-description">
                                 A collection of VFX and materials created in Unreal Engine. Some were done using the Cascade particle system, and others with the Niagara system.
                             </p>
-                            <a href="project1.html" class="view-more-btn">View More</a>
+                            <a href="projects/vfx.html" class="view-more-btn">View More</a>
                         </div>
                     </div>
                 </div>
